# PySimpleGamepadSDL3

./: .harper-dictionary.txt  README.md  example.py  pyproject.toml
src/pysimplegamepadsdl3/: __init__.py  py_simple_gamepad_sdl3.py
